--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,4 @@ services:
 script: true
 
 after_success:
-  - if [ "$TRAVIS_BRANCH" == "master" ]; then
-    docker build -t sesamcommunity/github-autodeployer .;
-    docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
-    docker push sesamcommunity/github-autodeployer:latest;
-    fi
+- bash <(curl -s https://raw.githubusercontent.com/sesam-community/guidelines/master/after_success.sh)
